--- a/package.json
+++ b/package.json
@@ -45,5 +45,12 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },"name": "awave-mock",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "json-server --watch db.json --port $PORT --host 0.0.0.0"
+  },
+  "dependencies": {
+    "json-server": "^1.0.0-beta.3"
   }
 }
